[package]
name = "proxy-sys"
version = "0.2.2"
authors = ["RinLovesYou"]
edition = "2021"
description = "A dynamic Windows System DLL proxy"
repository = "https://github.com/RinLovesYou/dll-proxy-rs"
license = "GPL-2.0"
readme = "../README.md"

[lib]
name = "proxy"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "parsing", "printing", "proc-macro"], default-features = false }
