[package]
name = "proxy-dll"
version = "0.2.5"
authors = ["RinLovesYou"]
edition = "2024"
description = "A dynamic Windows System DLL proxy"
repository = "https://github.com/RinLovesYou/dll-proxy-rs"
license = "GPL-2.0"
readme = "../README.md"

[dependencies]
proxy-sys = { path = "../proxy-sys" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemServices"], default-features = false }

[target.'cfg(linux)'.dependencies]
ctor = "0.1.26"

[lib]
crate-type = ["cdylib", "rlib"]
